--- a/4.3 Investment.md
+++ b/4.3 Investment.md
@@ -1,4 +1,4 @@
-# 4.2 Investment
+# 4.3 Investment
 
 Basic economic theory suggests that people invest to earn returns to maximise and smooth consumption. Given this basic objective, there are numerous "puzzles" present in the way that people actually behave.
 
@@ -6,7 +6,7 @@ Basic economic theory suggests that people invest to earn returns to maximise an
 
 Australia has one of the highest rates of share market participation in the world. In 2017, 37% of Australian adults held on-exchange investments. This level is a drop from over 50% in the early to mid-2000s, but above the 10% participation in many countries in Europe. Part of the reason for the high levels of Australian ownership is the large public offerings associated with the sale of public assets, including the Commonwealth Bank in 1991, Qantas in 1993 and Telstra in 1997.
 
-![](img/Chart_3.1_ASX_Investor_Study_2017.png)
+![](img/Chart_3.1_ASX_Investor_Study_2017.jpg)
 
 Despite the relatively high level of Australian ownership, there is still a question why barely more than a third of Australians own shares. If the stock market is not correlated with other income sources, there is a benefit of diversification by owning some shares.
 
